💄 Update style and font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: var(--font-geist-mono);
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
